--- a/ri/VCLog/Changelog/Entry/to_h-i.yaml
+++ b/ri/VCLog/Changelog/Entry/to_h-i.yaml
@@ -2,10 +2,9 @@
 aliases: []
 
 block_params: 
-comment: []
-
-full_name: VCLog::Changelog#format_rel_types
+comment: 
+full_name: VCLog::Changelog::Entry#to_h
 is_singleton: false
-name: format_rel_types
-params: (rev=false)
+name: to_h
+params: ()
 visibility: public
